<resources>
    <string name="app_name">Cheesus Crust</string>
    <string name="itm_name">Item Name</string>
    <string name="itm_type">Item Type</string>
    <string name="itm_sprice">Small Price (Rs.)</string>
    <string name="itm_mprice">Medium Price (Rs.)</string>
    <string name="itm_lprice">Large Price (Rs.)</string>
    <string name="itm_desc">Description</string>
    <string name="nav_pizza_text">Pizza</string>
    <string name="nav_beverages_text">Beverages</string>
    <string name="nav_dessert_text">Dessert</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="title_activity_signup_screen">signupScreen</string>
    <string name="appbar_scrolling_view_behavior">value1</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="enter_address">Enter Address</string>
    <string name="name">Name :</string>
    <string name="email">Email :</string>
    <string name="email_sp">email</string>
    <string name="address">Address :</string>
    <string name="phone">Phone :</string>
    <string name="confirm_your_password">Confirm Your Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="get_started">Get Started</string>
    <string name="to_tastful_and_marvelous_pizza_world">to tastful and marvelous pizza world!</string>
    <string name="welcome">welcome</string>
    <string name="hello">hello!</string>
    <string name="i_want_to_create_an_account">I want to create an account!</string>
    <string name="let_s_create_an_account">Let\'s create an account</string>
    <string name="i_have_an_account">I have an account!</string>
    <string name="change_address">Change Address</string>
    <string name="enter_your_new_address">Enter Your New Address</string>
    <string name="cancel">Cancel</string>
    <string name="enter_your_new_phone_number">Enter your new phone number</string>
    <string name="change_phone">Change Phone</string>
    <string name="enter_your_new_email_address">Enter your new Email Address</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="enter_your_current_password">Enter Your Current Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="confirm_above_password">Confirm Above Password</string>
    <string name="update_your_address">Update Your Address</string>
    <string name="logout">Logout</string>
    <string name="logged">logged</string>
    <string name="cheesus_crust">CheesusCrust</string>
    <string name="your_account_was_deleted">Your account was deleted!</string>
    <string name="some_error_occurred_lease_try_again_later">Some error occurred! Please try again later!</string>
    <string name="delete_my_account">Delete My Account</string>
    <string name="hurray_lets_eat_some_pizza">Hurray! Let\'s eat some pizza!!!</string>
    <string name="we_will_miss_you">We will miss you!</string>
    <string name="are_you_sure_about_this">Are you sure about this?</string>
    <string name="cant_update_your_password_right_now_please_try_again_shortly">Can\'t update your password right now! Please try again shortly…</string>
    <string name="your_password_updated">Your Password Updated!</string>
    <string name="ok">OK</string>
    <string name="error">Error!</string>
    <string name="invalid_current_password_please_enter_your_current_password_to_proceed">Invalid current password! Please enter your current password to proceed</string>
    <string name="password_mismatched_please_confirm_your_new_password_correctly_to_proceed">Password mismatched! Please confirm your new password correctly to proceed!</string>
    <string name="please_confirm_above_password_to_proceed">Please confirm above password to proceed</string>
    <string name="please_provide_a_new_password_to_proceed">Please provide a new password to proceed</string>
    <string name="please_provide_your_current_password_to_proceed">Please provide your current password to proceed</string>
    <string name="cant_update_your_phone_number_right_now_please_try_again_shortly">Can\'t update your Phone Number right now! Please try again shortly…</string>
    <string name="your_phone_number_updated">Your Phone Number Updated!</string>
    <string name="please_provide_a_phone_number_to_proceed">Please provide a Phone Number to proceed</string>
    <string name="cant_update_your_email_right_now_please_try_again_shortly">Can\'t update your Email right now! Please try again shortly…</string>
    <string name="your_email_updated">Your Email Updated!</string>
    <string name="entered_email_is_already_in_use_please_provide_another_email">Entered Email is already in use! Please provide another Email</string>
    <string name="please_provide_an_email_address_to_proceed">Please provide an Email Address to proceed</string>
    <string name="cant_update_your_address_right_now_please_try_again_shortly">Can\'t update your address right now! Please try again shortly…</string>
    <string name="your_address_updated">Your Address Updated!</string>
    <string name="please_provide_an_address_to_proceed">Please provide an address to proceed</string>
    <string name="update_password_dialog">Update Password Dialog</string>
    <string name="update_phone_dialog">Update Phone Dialog</string>
    <string name="update_email_dialog">Update Email Dialog</string>
    <string name="update_address_dialog">Update Address Dialog</string>
    <string name="my_account">My Account</string>
    <string name="please_enter_your_email">Please enter your email</string>
    <string name="please_provide_the_password">Please provide the password</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="invalid_password">Invalid password</string>
    <string name="login_success">Login Success</string>
    <string name="customer">Customer</string>
    <string name="please_enter_your_first_name">Please enter your first name</string>
    <string name="please_enter_your_last_name">Please enter your last name</string>
    <string name="please_enter_your_phone_number">Please enter your phone number</string>
    <string name="please_enter_your_address">Please enter your address</string>
    <string name="please_enter_your_email_address">Please enter your email address</string>
    <string name="please_enter_your_password">Please enter password</string>
    <string name="please_enter_above_password">Please enter above password</string>
    <string name="password_mismatched_please_enter_above_password">Password mismatched! Please enter above password</string>
    <string name="this_email_is_already_in_our_database_please_provide_another_email_address">This email is already in our database. Please provide another email address</string>
    <string name="insert_error_please_try_again_later">Insert Error. Please try again later</string>
    <string name="account_created_please_login">Account Created! Please Login</string>
    <string name="update_address">Update Address</string>
    <string name="must_implement_passAddress">Must implement passAddress()</string>
    <string name="update_email">Update Email</string>
    <string name="must_implement_passEmail">Must implement passEmail()</string>
    <string name="update_your_password">Update Your Password</string>
    <string name="must_implement_passPassword">Must implement passPassword()</string>
    <string name="update_phone_number">Update Phone Number</string>
    <string name="must_implement_passPhone">Must implement passPhone()</string>
    <string name="please_connect_to_a_network">Please connect to a network</string>
    <string name="c2019_cheesus_crust_all_rights_reserved">© 2019 Cheesus Crust All Rights Reserved</string>
    <string name="personal_notifications">Personal Notifications</string>
    <string name="include_all_the_personal_notifications">Include all the personal notifications</string>
    <string name="your_account_was_created">Your Account Was Created!</string>
    <string name="please_login_and_order_some_pizza_to_satisfy_your_hunger">Please login and order some pizza to satisfy your hunger…!</string>
    <string name="contatus">Contact Us</string>
    <string name="date">Date</string>
    <string name="fname">First Name</string>
    <string name="fname_n">First Name: </string>
    <string name="lname">Last Name</string>
    <string name="lname_n">Last Name:</string>
    <string name="remail">Re Enter Email:</string>
    <string name="message">Message:</string>
    <string name="send">Send</string>
    <string name="order">Order Inquiry</string>
    <string-array name="type">
        <item>Pizza</item>
        <item>Beverage</item>
        <item>Dessert</item>
    </string-array>
    <string name="additem">Add Items</string>
    <string name="addemp">Add Employees</string>
    <string name="viewemp">View Employees</string>
    <string name="viewinquries">View Inquries</string>
    <string name="personal_notification">Personal_Notifications</string>
    <string name="cart">Cart</string>
    <string name="dashboard">Dashboard</string>
    <string name="contact_us">Contact Us</string>
    <string name="view_inquiries">View Inquiries</string>
    <string name="view_items">View Items</string>
    <string name="view_customer">View Customers</string>
    <string name="welcome_admins">Welcome Admin!</string>
    <string name="my_profile">My Profile</string>
    <string name="settings">Settings</string>
    <string name="you_are_already_in_your_page">You are already in your page</string>
    <string name="you_are_already_in_dashboard">You are already in Dashboard</string>
    <string name="you_are_already_in_contact_us">You are already in Contact Us</string>
    <string name="settings_are_not_available_right_now">Settings are not available right now</string>
    <string name="admin">Admin</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to Logout?</string>
    <string name="add_an_item">Add an Item</string>
    <string name="invalid_email_address_please_enter_correct_email_address">Invalid Email Address! Please enter correct Email Address…</string>
    <string name="please_enter_valid_phone_number">Please enter valid phone number</string>
    <string name="add_image">"Add Image"</string>
    <string name="update_image">"Update Image</string>
    <string name="add_data">"Add Data</string>
    <string name="update_data">"Update Data</string>
    <string name="item_image">"Item Image"</string>
    <string name="enter_name">"Enter Name"</string>
    <string name="enter_sprice">"Enter Small Price"</string>
    <string name="enter_mprice">"Enter Medium Price"</string>
    <string name="enter_lprice">"Enter Large Price"</string>
    <string name="enter_desc">"Enter Description"</string>
    <string name="category_name">"Category name"</string>
    <string name="delete">"Delete"</string>
    <string name="food_items">"Food Items"</string>
    <string name="customer_name">Customer Name</string>
    <string name="customer_address">Customer Address</string>
    <string name="customer_email">Customer Email</string>
    <string name="customer_phone">Customer Phone</string>
    <string name="status">Status:</string>
    <string name="technical">Technical</string>
    <string name="mark_as_complete">Mark as Complete</string>
</resources>