<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/dashboard_icon"
            android:title="@string/dashboard"
            android:visible="false"/>
        <item
            android:id="@+id/nav_user_profile"
            android:icon="@drawable/user_profile"
            android:title="@string/my_profile" />
        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/product"
            android:title="@string/food_items" />
        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/contact_us_icon"
            android:title="@string/contact_us" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings_icon"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout_icon"
            android:title="@string/logout" />
    </group>

</menu>