<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".User.signupScreen"
    android:keepScreenOn="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/signup_background"
    android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="180dp"
            android:layout_gravity="end"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/eraserdust"
            android:text="@string/let_s_create_an_account"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/pureWhite" />

        <EditText
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:inputType="text|textCapWords"
            android:hint="@string/enter_first_name"
            android:textColorHint="@color/pureWhite"
            android:textColor="@color/pureWhite"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:id="@+id/signup_fname"
            android:importantForAutofill="no" />

        <EditText
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:textColorHint="@color/pureWhite"
            android:textColor="@color/pureWhite"
            android:layout_gravity="end"
            android:inputType="text|textCapWords"
            android:hint="@string/enter_last_name"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:id="@+id/signup_lname"
            android:importantForAutofill="no" />

        <EditText
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:textColorHint="@color/pureWhite"
            android:textColor="@color/pureWhite"
            android:layout_gravity="end"
            android:inputType="phone"
            android:hint="@string/enter_phone"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:id="@+id/signup_phone"
            android:importantForAutofill="no" />

        <EditText
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:textColorHint="@color/pureWhite"
            android:textColor="@color/pureWhite"
            android:layout_gravity="end"
            android:inputType="textPostalAddress|textCapWords"
            android:hint="@string/enter_address"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:id="@+id/signup_address"
            android:importantForAutofill="no" />

        <EditText
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:inputType="textEmailAddress"
            android:hint="@string/enter_email"
            android:textColorHint="@color/pureWhite"
            android:textColor="@color/pureWhite"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:id="@+id/signup_email"
            android:importantForAutofill="no" />

        <EditText
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:inputType="textPassword"
            android:hint="@string/enter_password"
            android:textColorHint="@color/pureWhite"
            android:textColor="@color/pureWhite"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:id="@+id/signup_password"
            android:importantForAutofill="no" />

        <EditText
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:inputType="textPassword"
            android:hint="@string/confirm_password"
            android:textColorHint="@color/pureWhite"
            android:textColor="@color/pureWhite"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:id="@+id/signup_confirmPassword"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/signup_signupBtn"
            android:layout_width="201dp"
            android:layout_height="35dp"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/button_background"
            android:onClick="userSignup"
            android:text="@string/signup" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i_have_an_account"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:layout_gravity="end"
            android:layout_marginEnd="20dp"
            android:onClick="goToLogin"/>

</LinearLayout>