<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User.loginScreen"
    android:orientation="vertical"
    android:background="@drawable/login_background"
    android:keepScreenOn="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/eraserdust"
        android:text="@string/hello"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="@color/pureWhite"
        android:layout_marginTop="@dimen/dp_220"
        android:layout_marginStart="@dimen/dp_30"/>

    <EditText
        android:layout_width="@dimen/dp_200"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_30"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_email"
        android:textColorHint="@color/pureWhite"
        android:textColor="@color/pureWhite"
        android:layout_marginTop="@dimen/dp_30"
        android:id="@+id/login_email"
        android:importantForAutofill="no" />

    <EditText
        android:layout_width="@dimen/dp_200"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/enter_password"
        android:textColorHint="@color/pureWhite"
        android:textColor="@color/pureWhite"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginStart="@dimen/dp_30"
        android:id="@+id/login_password"
        android:importantForAutofill="no" />

    <Button
        android:layout_width="@dimen/dp_200"
        android:layout_height="@dimen/dp_46"
        android:layout_marginStart="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_30"
        android:background="@drawable/button_background"
        android:onClick="userLogin"
        android:text="@string/login" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_120"
        android:background="@color/pureYellowTransparent"
        android:onClick="goToSignup"
        android:padding="@dimen/dp_10"
        android:text="@string/i_want_to_create_an_account"
        android:textColor="@color/pureWhite"
        android:textSize="@dimen/sp_20" />

</LinearLayout>