<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/date"
            android:textColor="@color/pureWhite"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:columnCount="2"
            android:rowCount="5"
            >

            <TextView
                android:id="@+id/textView"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/pureWhite"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
            <TextView
                android:id="@+id/textViewName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/technical"
                android:textColor="@color/pureWhite"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/pureWhite"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
            <TextView
                android:id="@+id/textViewEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/pureWhite"
                android:text=""/>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textColor="@color/pureWhite"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
            <TextView
                android:id="@+id/textViewPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/pureWhite"
                android:text=""
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/pureWhite"
                android:text="@string/message"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/textViewMsg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/pureWhite"
                android:text=""
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textColor="@color/pureWhite"
                android:text="@string/status"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/textViewStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/pureWhite"
                android:text=""
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

        </GridLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/buttonEditInquiry"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/button2"
                android:text="@string/mark_as_complete"
                android:layout_gravity="end"/>

            <Button
                android:id="@+id/buttonDeleteInquiry"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/button2"
                android:text="@string/delete"
                android:layout_gravity="end"/>


        </GridLayout>



    </LinearLayout>

</LinearLayout>